--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <p class="about-perfume">A floral, solar, and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
             <p class="price">
                 <span class="new-price">$149.99</span>
-                <span class="old-price"><strike>$169.99</strike></span>
-            </p>
+                <span class="old-price">$169.99</span>
+            </p>            
             <button aria-label="Add Gabrielle Essence Eau De Parfum to cart">
                 <img src="images/icon-cart.svg" alt="Cart Icon" />
                 <span>Add to Cart</span>
